# BaseUI

./: CMakeLists.txt  README.rst  baseui.pri
example/: CMakeLists.txt  example.pro  main.cpp  main.qml
icons/: baseui_icons.qrc
include/BaseUI/: core.h  icons.h
qml/: App.qml  AppStackPage.qml  AppToolBar.qml  ButtonContained.qml  ButtonFlat.qml  DatePicker.qml  EdgeEffect.qml  HorizontalDivider.qml  HorizontalListDivider.qml  Icon.qml  LabelBody.qml  LabelBodySecondary.qml  LabelSubheading.qml  LabelTitle.qml  ListViewEdgeEffect.qml  OptionsDialog.qml  PopupError.qml  PopupInfo.qml  PopupToast.qml  SettingsCheckItem.qml  SettingsItem.qml  SettingsSectionTitle.qml  Style.qml  TimeCircle.qml  TimePickerCircular.qml  TimePickerTumbler.qml
qml/BaseUI/: App.qml  AppStackPage.qml  AppToolBar.qml  ButtonFlat.qml  ButtonRaised.qml  HorizontalDivider.qml  LabelBody.qml  LabelSubheading.qml  LabelTitle.qml  PopupColorSelection.qml  PopupError.qml  PopupInfo.qml  PopupList.qml  PopupModalBase.qml  PopupToast.qml  SettingsItem.qml  SettingsSectionTitle.qml  Style.qml  baseui_qml.qrc  qmldir
qml/shaders/: clock.frag  icon.frag
src/: core.cpp  iconprovider.h  icons.cpp  icons.h  plugin.h
